panning now works !

--- a/README
+++ b/README
@@ -27,3 +27,4 @@ To install the programs, library, and header file, run
 
 To zoom in the view GUI, click and drag up and down
 with the right mouse button.
+To pan in the GUI, click and drag with the middle mouse button.
